apps/cache/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-db
  namespace: zt-cache
  labels:
    app: cache-db
spec:
  selector:
    app: cache-db
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: cache-db-headless
  namespace: zt-cache
  labels:
    app: cache-db
spec:
  clusterIP: None
  selector:
    app: cache-db
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
