apps/cache/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-cache
  namespace: zt-cache
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - zt-posts
